--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 # Core dependencies
 openpyxl>=3.1.0
 pandas>=2.0.0
+xlsxwriter>=3.1.0
+
+# Stock price fetching for Schedule FA
+yfinance>=0.2.0
 
 # Web app dependencies
 streamlit>=1.28.0
