--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ pandas>=2.0.0
 xlsxwriter>=3.1.0
 
 # Stock price fetching for Schedule FA
-# Pin to version compatible with Python 3.9 (0.2.40+ uses Python 3.10+ syntax)
-yfinance>=0.2.0,<0.2.40
+# Pin to version compatible with Python 3.10 (0.2.36+ uses Python 3.12+ f-string syntax)
+yfinance>=0.2.0,<0.2.36
 
 # Web app dependencies
 streamlit>=1.28.0
